--- a/src/content/blog/post-1/index.mdx
+++ b/src/content/blog/post-1/index.mdx
@@ -8,8 +8,8 @@ tags:
 import SierpinskiTriangle from '../../../components/SierpinskiTriangle.astro';
 
 ## Understanding Fractals 
-In mathematics, [Fractals](https://en.wikipedia.org/wiki/Fractal) are geometric objects which do not have a well defined notion of dimension, in the intuitive way (which is always a non-negative integer).
-Rigorously, after defining a less notion of dimension such as [Box counting dimension](https://en.wikipedia.org/wiki/Minkowski%E2%80%93Bouligand_dimension) or [Hausdorff Dimension](https://en.wikipedia.org/wiki/Hausdorff_dimension), they are exactly the geometric objects with non-integer dimension.
+In mathematics, [Fractals](https://en.wikipedia.org/wiki/Fractal) are geometric objects which intuitively do not seem to have a well defined notion of dimension (which we expect to be a non-negative integer).
+Rigorously, after defining a more general notion of dimension such as [Box counting dimension](https://en.wikipedia.org/wiki/Minkowski%E2%80%93Bouligand_dimension) or [Hausdorff Dimension](https://en.wikipedia.org/wiki/Hausdorff_dimension), they are exactly the geometric objects with non-integer dimension.
 
 ## The Sierpiński as an example of a fractal
 The [Sierpiński triangle](https://en.wikipedia.org/wiki/Sierpi%C5%84ski_triangle) is an example of a fractal, which can be constructed by the iterative removal of triangles as follows:
