Added more attributes to videos

--- a/src/content/blog/00-Sierpinski/index.mdx
+++ b/src/content/blog/00-Sierpinski/index.mdx
@@ -30,7 +30,12 @@ In this hypothetical scenario, we represent each side of the coin by $0,1,2$ and
 The probabilistic Sierpiński triangle of depth $N$ is defined to be the set of all points $p_N(X)$.
 The following is a visualization of this process using the python Library [Manim](https://en.wikipedia.org/wiki/3Blue1Brown#Manim).
 
-<video width="640" height="360" controls>
+<video 
+  width="640" 
+  height="360" 
+  controls 
+  preload="metadata" 
+  loading="lazy">
   <source src="/videos/animated_sierpinski_triangle.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
