--- a/src/content/blog/01-Chaos Games/index.mdx
+++ b/src/content/blog/01-Chaos Games/index.mdx
@@ -26,14 +26,24 @@ My implementation is available on my [Github](https://github.com/SrPolipo), on t
 Here are some project examples:
 
 A visualization of iterations of the Barnsley Fern, linearly interpolated with a linear rate function: 
-<video width="640" height="360" controls>
+<video 
+  width="640" 
+  height="360" 
+  controls 
+  preload="metadata" 
+  loading="lazy">
   <source src="/videos/animated_Barnsley.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
 
 And a visualization of the Vicsek fractal:
 
-<video width="640" height="360" controls>
+<video 
+  width="640" 
+  height="360" 
+  controls 
+  preload="metadata" 
+  loading="lazy">
   <source src="/videos/animated_Vicsek_fractal.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
