Updated the videos. Should be fixed on firefox

--- a/src/content/blog/00-Sierpinski/index.mdx
+++ b/src/content/blog/00-Sierpinski/index.mdx
@@ -34,8 +34,7 @@ The following is a visualization of this process using the python Library [Manim
   width="640" 
   height="360" 
   controls 
-  preload="metadata" 
-  loading="lazy">
-  <source src="/videos/compressed_Sierpinski.mp4" type="video/mp4" />
+  preload="auto">
+  <source src="/videos/faststart_sierpinski.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
