--- a/src/content/blog/02-Orientability/index.mdx
+++ b/src/content/blog/02-Orientability/index.mdx
@@ -35,8 +35,7 @@ Since, if it was orientable, the initial arrow would agree with the final arrow 
   width="640" 
   height="360" 
   controls 
-  preload="metadata" 
-  loading="lazy">
+  preload="auto">
   <source src="/videos/compressed_mobius.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
