changed some stuff

--- a/src/content/blog/00-Sierpinski/index.mdx
+++ b/src/content/blog/00-Sierpinski/index.mdx
@@ -6,7 +6,7 @@ tags:
   - Manim
   - Geometry
 ---
-import SierpinskiTriangle from '../../../components/SierpinskiTriangle.astro';
+import SierpinskiTriangle from '../../../components/SierpinskiTriangle.jsx';
 
 ## Understanding Fractals 
 In mathematics, [Fractals](https://en.wikipedia.org/wiki/Fractal) are geometric objects which intuitively do not seem to have a well defined notion of dimension (which we expect to be a non-negative integer).
